--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,8 @@
 name = "dynamic-ar-viewer"
-compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+compatibility_date = "2026-02-04"
+compatibility_flags = ["nodejs_compat", "global_fetch_strictly_public"]
 # OpenNext output directory
-pages_build_output_dir = ".open-next/assets" 
+pages_build_output_dir = ".open-next" 
 
 [[r2_buckets]]
 binding = "MODELS_BUCKET"
